--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,6 +4,8 @@ androidx-lifecycle = "2.6.1"
 androidx-activity-compose = "1.7.1"
 androidx-compose = "2023.05.00"
 androidx-navigation-compose = "2.5.3"
+agp = "8.2.0-alpha02"
+kotlin = "1.8.10"
 
 [libraries]
 androidx-core = { group = "androidx.core", name = "core-ktx", version.ref = "androidx-core" }
@@ -33,3 +35,8 @@ compose-debug = [
     "androidx-compose-ui-tooling-preview",
     "androidx-compose-ui-test-manifest"
 ]
+
+[plugins]
+android-library = { id = "com.android.library", version.ref = "agp" }
+kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+android-application = { id = "com.android.application", version.ref = "agp" }
